--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -1,3 +1,3 @@
-default: --format progress --color features
+default: --format pretty --color features
 autotest: --format pretty
 autotest-all: --profile default
